# XH_Agent

./: .gitignore  LICENSE  README.md  pyproject.toml
app/desktop/: WinInnoSetup.iss  build_desktop_app.sh  custom_tray.py  desktop.py  desktop_server.py  dev_server.py  installer.icns
app/desktop/studio_server/: webhost.py
app/desktop/studio_server/api/controller/: model_controller.py  settings_controller.py  work_controller.py
app/desktop/studio_server/api/service/: llm_providers_service.py  work_service.py
app/desktop/studio_server/datamodel/dto/: Chatdto.py  LLMdto.py  Workdto.py
app/desktop/studio_server/utils/: R.py  config.py  exhaustive_error.py
app/desktop/studio_server/utils/parsers/: base_parser.py  r1_parser.py
app/web_ui/: README.md  index.html  package.json  pnpm-lock.yaml
app/web_ui/src/: App.vue  main.ts
app/web_ui/src/api/: provider_api.ts  system_api.ts  work_api.ts
app/web_ui/src/assets/: main.css  uploadAdd.json  uploadOk.json
app/web_ui/src/components/Wroker/: DragDropUploader.vue  ImageGroup.vue
app/web_ui/src/components/common/: AppPage.vue  Message.vue
app/web_ui/src/hooks/: useMessage.ts  useUpdate.ts
app/web_ui/src/router/: index.ts
app/web_ui/src/types/: app.ts
app/web_ui/src/utils/: AppError.ts  request.ts  utils.ts
app/web_ui/src/views/: WorkerView.vue
app/web_ui/src/views/Setting/: CheckForUpdateView.vue  ProvidersView.vue  SettingMainView.vue  SystemCache.vue
